# FinePar

./: .gitattributes  LICENSE  README.md  run.sh
bfs_dynamic/: CLHelper.h  Kernels.cl  bfs  bfs.cpp  res2.txt  run_Ga41As41H72.sh  run_circuit5M.sh  run_eu2005.sh  run_fullchip.sh  run_in2004.sh  run_pokec.sh  run_rajat.sh  run_scale20.sh  run_scale21.sh  run_si.sh  run_webberk.sh
bfs_percent/: CLHelper.h  Kernels.cl  bfs  bfs.cpp  make.config  res.txt  run2.sh  run_circuit5M.sh  run_eu2005.sh  run_fullchip.sh  run_in2004.sh  run_livejornal.sh  run_scale19.sh  run_scale20.sh  run_webberk.sh
bfs_separate/: CLHelper.h  bfs  bfs.cpp  tags
bfs_seperate/: Kernels.cl  Makefile  bfs  res0307.txt  resbig.txt  resnew.txt  ressmall.txt  run.sh  run_scale20.sh
codeTransEngine/: README.md  run.sh
codeTransEngine/fineParP2Scl/: CMakeLists.txt  Example.cpp
connectedComp_dynamic/: Makefile  run_Ga41As41H72.sh  run_scale19.sh  run_scale20.sh  spmv  spmv_csr.cpp  spmv_csr_vector.cl  spmv_util.cpp  spmv_util.h
connectedComp_percent/: shan.txt  spmv  spmv_csr.cpp  spmv_csr_vector.cl  tags
connectedComp_separate/: spmv  spmv_csr.cpp  spmv_csr_vector.cl  spmv_util.h
connectedComp_seperate/: spmv  xaa
graphcoloring_dynamic/: Makefile  run_fullchip.sh  run_in2004.sh  spmv  spmv_csr.cpp  spmv_csr_vector.cl  spmv_util.cpp
graphcoloring_percent/: run.sh  run_fullchip.sh  run_in2004.sh  spmv  spmv_csr.cpp  spmv_csr_vector.cl  spmv_util.cpp  spmv_util.h
graphcoloring_separate/: spmv  spmv_csr.cpp  spmv_util.cpp  tags
graphcoloring_seperate/: resnew.txt  run_scale20.sh  spmv  (+3 more)
(+883 files in other folders)
